syntax = 'proto3';

package maximum;

option java_package = "com.proto.maximum";
option java_multiple_files = true;

message FindMaximumRequest {
    int32 potentialMaximum = 1;
}

message FindMaximumResponse {
    int32 actualMaximum = 1;
}

service FindMaximumService {
    rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse) {};
}
